--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "haml-jsx-loader",
   "version": "1.0.0",
   "description": "Inline HAML with JSX",
+  "url" : "https://github.com/dingbat/haml-jsx-loader/issues",
+  "repository": "dingbat/haml-jsx-loader",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Dan Hassin",
   "license": "MIT",
   "dependencies": {
     "haml": "^0.4.3",
     "loader-utils": "^0.2.15"
+  },
+  "devDependencies": {
+    "glob-fs": "^0.1.6",
+    "mocha": "^3.0.2"
   }
 }
